--- a/index.html
+++ b/index.html
@@ -1,86 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <h1>Frequently Asked Questions</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>Document</title>
+</head>
 
-    <details>
-      <summary>
-        <p class="question">What is FAQ ("Frequently Asked Questions") ?</p>
-      </summary>
-      <p class="answer">
-        <br />An FAQ is a list of frequently asked questions (FAQs) and answers
-        on a particular topic (also known as Questions and Answers [Q&A] or
-        Frequently Answered Questions). The format is often used in articles,
-        websites, email lists, and online forums where common questions tend to
-        recur, for example through posts or queries by new users related to
-        common knowledge gaps. The purpose of an FAQ is generally to provide
-        information on frequent questions or concerns; however, the format is a
-        useful means of organizing information, and text consisting of questions
-        and their answers may thus be called an FAQ regardless of whether the
-        questions are actually frequently asked[1].
-      </p>
-    </details>
+<body>
+  <h1>Frequently Asked Questions</h1>
 
-    <details>
-      <summary>
-        <p class="question">What is FAQ ("Frequently Asked Questions") ?</p>
-      </summary>
-      <p class="answer">
-        <br />An FAQ is a list of frequently asked questions (FAQs) and answers
-        on a particular topic (also known as Questions and Answers [Q&A] or
-        Frequently Answered Questions). The format is often used in articles,
-        websites, email lists, and online forums where common questions tend to
-        recur, for example through posts or queries by new users related to
-        common knowledge gaps. The purpose of an FAQ is generally to provide
-        information on frequent questions or concerns; however, the format is a
-        useful means of organizing information, and text consisting of questions
-        and their answers may thus be called an FAQ regardless of whether the
-        questions are actually frequently asked[1].
-      </p>
-    </details>
+  <details>
+    <summary>
+      <p class="question">What is FAQ ("Frequently Asked Questions") ?</p>
+    </summary>
+    <p class="answer">
+      An FAQ is a list of frequently asked questions (FAQs) and answers
+      on a particular topic (also known as Questions and Answers [Q&A] or
+      Frequently Answered Questions). The format is often used in articles,
+      websites, email lists, and online forums where common questions tend to
+      recur, for example through posts or queries by new users related to
+      common knowledge gaps. The purpose of an FAQ is generally to provide
+      information on frequent questions or concerns; however, the format is a
+      useful means of organizing information, and text consisting of questions
+      and their answers may thus be called an FAQ regardless of whether the
+      questions are actually frequently asked[1].
+    </p>
+  </details>
 
-    <details>
-      <summary>
-        <p class="question">What is FAQ ("Frequently Asked Questions") ?</p>
-      </summary>
-      <p class="answer">
-        <br />An FAQ is a list of frequently asked questions (FAQs) and answers
-        on a particular topic (also known as Questions and Answers [Q&A] or
-        Frequently Answered Questions). The format is often used in articles,
-        websites, email lists, and online forums where common questions tend to
-        recur, for example through posts or queries by new users related to
-        common knowledge gaps. The purpose of an FAQ is generally to provide
-        information on frequent questions or concerns; however, the format is a
-        useful means of organizing information, and text consisting of questions
-        and their answers may thus be called an FAQ regardless of whether the
-        questions are actually frequently asked[1].
-      </p>
-    </details>
+  <details>
+    <summary>
+      <p class="question">What is FAQ ("Frequently Asked Questions") ?</p>
+    </summary>
+    <p class="answer">
+      An FAQ is a list of frequently asked questions (FAQs) and answers
+      on a particular topic (also known as Questions and Answers [Q&A] or
+      Frequently Answered Questions). The format is often used in articles,
+      websites, email lists, and online forums where common questions tend to
+      recur, for example through posts or queries by new users related to
+      common knowledge gaps. The purpose of an FAQ is generally to provide
+      information on frequent questions or concerns; however, the format is a
+      useful means of organizing information, and text consisting of questions
+      and their answers may thus be called an FAQ regardless of whether the
+      questions are actually frequently asked[1].
+    </p>
+  </details>
 
-    <details>
-      <summary>
-        <p class="question">What is FAQ ("Frequently Asked Questions") ?</p>
-      </summary>
-      <p class="answer">
-        <br />An FAQ is a list of frequently asked questions (FAQs) and answers
-        on a particular topic (also known as Questions and Answers [Q&A] or
-        Frequently Answered Questions). The format is often used in articles,
-        websites, email lists, and online forums where common questions tend to
-        recur, for example through posts or queries by new users related to
-        common knowledge gaps. The purpose of an FAQ is generally to provide
-        information on frequent questions or concerns; however, the format is a
-        useful means of organizing information, and text consisting of questions
-        and their answers may thus be called an FAQ regardless of whether the
-        questions are actually frequently asked[1].
-      </p>
-    </details>
-  </body>
+  <details>
+    <summary>
+      <p class="question">What is FAQ ("Frequently Asked Questions") ?</p>
+    </summary>
+    <p class="answer">
+      An FAQ is a list of frequently asked questions (FAQs) and answers
+      on a particular topic (also known as Questions and Answers [Q&A] or
+      Frequently Answered Questions). The format is often used in articles,
+      websites, email lists, and online forums where common questions tend to
+      recur, for example through posts or queries by new users related to
+      common knowledge gaps. The purpose of an FAQ is generally to provide
+      information on frequent questions or concerns; however, the format is a
+      useful means of organizing information, and text consisting of questions
+      and their answers may thus be called an FAQ regardless of whether the
+      questions are actually frequently asked[1].
+    </p>
+  </details>
+
+  <details>
+    <summary>
+      <p class="question">What is FAQ ("Frequently Asked Questions") ?</p>
+    </summary>
+    <p class="answer">
+      An FAQ is a list of frequently asked questions (FAQs) and answers
+      on a particular topic (also known as Questions and Answers [Q&A] or
+      Frequently Answered Questions). The format is often used in articles,
+      websites, email lists, and online forums where common questions tend to
+      recur, for example through posts or queries by new users related to
+      common knowledge gaps. The purpose of an FAQ is generally to provide
+      information on frequent questions or concerns; however, the format is a
+      useful means of organizing information, and text consisting of questions
+      and their answers may thus be called an FAQ regardless of whether the
+      questions are actually frequently asked[1].
+    </p>
+  </details>
+</body>
+
 </html>
